--- a/styles.css
+++ b/styles.css
@@ -12,27 +12,43 @@ html {
 }
 body {
   height: 100vh;
-  background-color: var(--main-bg-color);
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#scores {
+  font-size: 200%;
 }
 
 .game {
   list-style-type: none;
-  border: 2px solid lime;
   margin: auto;
   padding: 0;
   width: 640px;
+  display: flex;
+  flex-wrap: wrap;
 }
 .card {
-  font-size: 250%;
-  border: 2px solid aqua;
-  width: 100px;
-  height: 100px;
+  border: 2px solid white;
   margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   user-select: none;
+  border-radius: 0.5rem;
+  width: calc(100% / 4);
+  aspect-ratio: 1;
+  background-color: green;
+}
+.card span {
+  font-size: 450%;
+  display: none;
+}
+
+.card.show > span {
+  display: flex;
 }
